# Data_quality_monitoring

./: .env  .gitignore  __init__.py  conflicts_with_gcp_library.txt  extract_data.py  main.py  pyproject.toml  python_test.py  python_test_fastapi.py  requirements.txt  setup.py  test-bigquery.py  test_db.py
airflow/: docker-compose.yaml
airflow/dags/: dag.py  dbt_data_quality_dag.py
airflow/dbt/: .user.yml  dbt_project.yml  profiles.yml
airflow/dbt/macros/: .gitkeep
airflow/dbt/models/: schema.yml
airflow/dbt/models/marts/: .gitkeep  data_quality_summary.sql  mart_summary.sql  prct_test_query.sql
airflow/dbt/models/staging/: .gitkeep  (+3 more)
airflow/dbt/tests/: .gitkeep  test_table_shops_business_logic.sql  test_table_shops_column_formats.sql  test_table_shops_data_ranges.sql  test_table_shops_date_format.sql
airflow/scripts/: prct_sql_query_gen.py  requirements.txt  test_db.py  test_sql_query_gen.py  transform_columns.py
conn_scripts/: db_connection.py
data_bases/: __init__.py  extract_data.py
data_quality_monitoring/conn_scripts/: db_connection.py  project_logger.py
data_quality_monitoring/data_bases/: __init__.py  extract_data.py  extract_data_to_gcp.py
data_quality_monitoring/extract_scripts/: extraction_func.py  hashing_rows.py
data_quality_monitoring/sensor_scripts/: sensor.py
data_quality_monitoring/trans_scripts/: db_operations.py  get_sql_queries.py
extract_scripts/: extraction_func.py  hashing_rows.py
scripts/: test_db.py  test_sql_query_gen.py
src/: api.py  sensor.py
tests/src/: test_sensor.py
trans_scripts/: db_operations.py
(+12 files in other folders)
