[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-monitoring"
version = "0.1.0"
description = "Data quality monitoring tools"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["Data_quality_monitoring", "Data_quality_monitoring.*"]