[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-monitoring"
version = "0.1.0"
description = "Data quality monitoring tools"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = [
  "Data_quality_monitoring",
  "Data_quality_monitoring.conn_scripts",
  "Data_quality_monitoring.data_bases",
  "Data_quality_monitoring.extract_scripts",
  "Data_quality_monitoring.trans_scripts",
]

[tool.setuptools.package-data]
Data_quality_monitoring = ["**/*.sql", "**/*.yml", "**/*.yaml", "**/*.csv"]